--- a/Challenge3.html
+++ b/Challenge3.html
@@ -3,7 +3,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Challenge 3</title>
+    <title>index.html</title>
     <style>
         body { font-family: Arial, sans-serif; padding: 20px; }
         #authScreen, #mainContent, #result { display: none; }
